# OOP

./: .coverage  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
src/: base_entity.py  base_product.py  category.py  class_for_prod.py  exceptions.py  lawn_grass.py  log_mixin.py  main.py  order.py  private_product.py  product.py  smartphone.py  test_prod.py  utils.py
tests/: test_base_product.py  test_category.py  test_inheritance.py  test_lawn_grass.py  test_log_mixin.py  test_main.py  test_private_product.py  test_product.py  test_smartphone.py  test_utils.py
